# airas-20251009-055033-matsuzawa

./: pyproject.toml
.github/workflows/: run_experiment_with_claude_code.yml  run_experiment_with_open_code.yml
.research/: research_history.json
.research/iteration1/: output.txt
.research/iteration1/cifar10c_resnet20_bnadapt/: config.yaml  results.json
.research/iteration1/cifar10c_resnet20_ngfat/: config.yaml  results.json
.research/iteration1/cifar10c_resnet20_source/: config.yaml  results.json
.research/iteration1/cifar10c_resnet20_tent/: config.yaml  results.json
.research/iteration1/cifar10c_resnet20_zorro/: config.yaml  results.json
.research/iteration1/tin_c_mnv2_no_fisher/: config.yaml  results.json
.research/iteration1/tin_c_mnv2_no_gate/: config.yaml  results.json
.research/iteration1/tin_c_mnv2_no_rollback/: config.yaml  results.json
.research/iteration1/tin_c_mnv2_no_shrinkage/: config.yaml  results.json
.research/iteration1/tin_c_mnv2_zorro_full/: config.yaml  results.json
.research/iteration1/tinyimagenet_resnet20_gn_ngfat/: config.yaml  results.json
.research/iteration1/tinyimagenet_resnet20_gn_rotta/: config.yaml  results.json
.research/iteration1/tinyimagenet_resnet20_gn_source_frozen/: config.yaml  results.json
.research/iteration1/tinyimagenet_resnet20_gn_zorro_full/: config.yaml  results.json
.research/iteration1/tinyimagenet_resnet20_gn_zorro_lite/: config.yaml  results.json
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+139 files in other folders)
